Testing new domain

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<link type="text/css" media="all" href="./css/main.css" rel="stylesheet"/>
 	</head>
 
-	<body class="profile2">
+	<body class="profile2 v2">
 		<article>
 			<h1>David Storey</h1>
 
