--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 				<p>A talented, reliable web developer, based in the Edinburgh area.</p>
 				<p>I specialise in front-end development: JavaScript, CSS and HTML, but am known to dabble with PHP and Node.js. I've built iOS and Android apps using PhoneGap. Way back in the mists of time, I wrote mobile phone games with J2ME.</p>
-				<p>Currently I'm a Web Development Manager at <a target="_blank" href="http://www.realise.com">Realise</a> where I've helped deliver everything from financial calculators and site-wide redesigns to Facebook and mobile apps for big names such as the BBC, Disney, Universal Pictures, Standard Life and Expedia.</p>
+				<p>Currently I am Head of Web Development at <a target="_blank" href="http://www.amazerealise.com">AmazeRealise</a> where I've helped deliver everything from financial calculators and site-wide redesigns to Facebook and mobile apps for big names such as the BBC, Disney, Universal Pictures, Standard Life and Expedia.</p>
 
 				<h3>Recent personal projects</h3>
 
