--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Lost in Code - David Storey, Web Developer</title>
+		<title>David Storey - Lead Front-End Developer - Edinburgh</title>
 
 		<meta name="description" content="Personal website of David Storey. A web developer and creative technologist based in the Edinburgh area."/>
 
@@ -12,39 +12,75 @@
 
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
 
-		<link type="text/css" media="all" href="./css/reset.css" rel="stylesheet"/>
 		<link type="text/css" media="all" href="./css/main.css" rel="stylesheet"/>
 	</head>
 
-	<body class="profile2 v2">
-		<article>
-			<h1>David Storey</h1>
+	<body>
+		<main>
+			<header>
+				<img src="./img/david.jpg" alt="David Storey">
 
-			<section>
-				<h2>You know the web? I help build that.</h2>
+				<h1>David Storey</h1>
+				<h2>Lead Front-End Developer</h2>
 
-				<p>A talented, reliable web developer, based in the Edinburgh area.</p>
-				<p>I specialise in front-end development: JavaScript, CSS and HTML, but am known to dabble with PHP and Node.js. I've built iOS and Android apps using PhoneGap. Way back in the mists of time, I wrote mobile phone games with J2ME.</p>
-				<p>Currently I am Head of Web Development at <a target="_blank" href="http://www.amazerealise.com">AmazeRealise</a> where I've helped deliver everything from financial calculators and site-wide redesigns to Facebook and mobile apps for big names such as the BBC, Disney, Universal Pictures, Standard Life and Expedia.</p>
-
-				<h3>Recent personal projects</h3>
-
-				<p><a target="_blank" href="http://guesstheirage.co.uk/">Guess Their Age</a> - Simple game built using TMDb API.</p>
-				<p><a target="_blank" href="https://play.google.com/store/apps/details?id=com.lostincode.cuteaddict">Cute Addict</a> - Android RSS aggregator implemented with Backbone and Phonegap.</p>
-				<p><a target="_blank" href="http://codepen.io/davidpanik/full/myMrLx/">Spiral Art Generator</a> - A tool for making and sharing beautiful spiral art.</p>
-				<p><a target="_blank" href="http://www.moviesonfreeview.co.uk">Movies on Freeview</a> - Find movies worth watching on Freeview. Built with Node and Angular.</p>
-				<p><a target="_blank" href="https://www.airconsole.com/play/adequate-bingo">Adequate Bingo</a> - Multiplayer bingo on Airconsole. Built with Ractive.</p>
-				<p><a target="_blank" href="http://www.ghosttrainbuilder.com">Ghost Train Builder</a> - Make your own VR ride. Built with A-Frame and Vue.</p>
-
-				<nav class="selfClearing">
-					<a href="mailto:david@lostincode.co.uk" target="_blank"><img src="./img/icons/email.png" alt="E-mail" /></a>
-					<a href="http://uk.linkedin.com/in/daviddstorey" target="_blank"><img src="./img/icons/linkedin.png" alt="LinkedIn" /></a>
-					<a href="https://twitter.com/david_panik" target="_blank"><img src="./img/icons/twitter.png" alt="Twitter" /></a>
-					<a href="https://www.facebook.com/davidpanik" target="_blank"><img src="./img/icons/facebook.png" alt="Facebook" /></a>
-					<a href="https://github.com/davidpanik" target="_blank"><img src="./img/icons/github.png" alt="GitHub" /></a>
+				<nav>
+					<ul>
+						<li><a href="#about">About</a></li>
+						<li><a href="#clients">Clients</a></li>
+						<li><a href="#projects">Projects</a></li>
+						<li><a href="#contact">Contact</a></li>
+					</ul>
 				</nav>
+			</header>
+
+			<section id="about">
+				<h3>Hiya</h3>
+
+				<p>For over ten years I have helped deliver amazing digital experiences.</p>
+				<p>Focusing on the front-end (JavaScript, CSS), I've built sites, games, competitions, financial calculators and charting interfaces for a range of big name <a href="#clients">clients</a>.</p>
+				<p>Currently I am the Head of Web Development at <a href="https://www.amazerealise.com/" target="_blank">AmazeRealise</a> in Edinburgh, where I lead a team of fifteen developers, engage with clients and help drive the business forwards.</p>
+				<p>In my own time I help run the local <a href="http://dalkeithscouts.org.uk/" target="_blank">Cub Pack</a>, sell t-shirts on <a href="https://www.etsy.com/uk/shop/IntentionalStains" target="_blank">Etsy</a> and dabble with <a href="https://www.wattpad.com/user/aweeadventure" target="_blank">creative writing</a>.</p>
 			</section>
-		</article>
+
+			<section id="clients">
+				<h3>Clients</h3>
+
+				<ul class="images">
+					<li><img src="./img/clients/expedia.svg" alt="Expedia"></li>
+					<li><img src="./img/clients/disney.svg" alt="Disney"></li>
+					<li><img src="./img/clients/bbc.svg" alt="BBC Worldwide"></li>
+					<li><img src="./img/clients/sli.svg" alt="Standard Life Investments"></li>
+					<li><img src="./img/clients/lloyds.svg" alt="Lloyds Banking Group"></li>
+					<li><img src="./img/clients/efl.svg" alt="EFL"></li>
+				</ul>
+			</section>
+
+			<section id="projects">
+				<h3>Projects</h3>
+
+				<ul>
+					<li><a href="http://guesstheirage.co.uk/" target="_blank">Guess Their Age</a></li>
+					<li><a href="http://codepen.io/davidpanik/full/myMrLx/" target="_blank">Spiral Art Generator</a></li>
+					<li><a href="http://www.moviesonfreeview.co.uk" target="_blank">Movies on Freeview</a></li>
+					<li><a href="https://www.airconsole.com/play/adequate-bingo" target="_blank">Adequate Bingo</a></li>
+					<li><a href="http://www.ghosttrainbuilder.com" target="_blank">Ghost Train Builder</a></li>
+					<li><a href="https://js13kgames.com/entries/offline-search-the-game" target="_blank">JS13k 2018</a></li>
+				</ul>
+			</section>
+
+			<section id="contact">
+				<h3>Contact</h3>
+
+				<ul>
+					<li><a href="mailto:david@lostincode.co.uk" target="_blank"><img src="./img/contact/email.svg" alt="E-mail"></a></li>
+					<li><a href="http://uk.linkedin.com/in/daviddstorey" target="_blank"><img src="./img/contact/linkedin.svg" alt="LinkedIn"></a></li>
+					<li><a href="https://twitter.com/david_panik" target="_blank"><img src="./img/contact/twitter.svg" alt="Twitter"></a></li>
+					<li><a href="https://www.facebook.com/davidpanik" target="_blank"><img src="./img/contact/facebook.svg" alt="Facebook"></a></li>
+					<li><a href="https://github.com/davidpanik" target="_blank"><img src="./img/contact/github.svg" alt="GitHub"></a></li>
+					<li><a href="https://codepen.io/davidpanik/" target="_blank"><img src="./img/contact/codepen.svg" alt="CodePen"></a></li>
+				</ul>
+			</section>
+		</main>
 
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -55,5 +91,7 @@
 			ga('create', 'UA-45462422-1', 'lostincode.co.uk');
 			ga('send', 'pageview');
 		</script>
+
+		<script src="./js/main.js"></script>
 	</body>
 </html>
