Forgot to update the description

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>David Storey - Lead Front-End Developer - Edinburgh</title>
 
-		<meta name="description" content="Personal website of David Storey. A web developer and creative technologist based in the Edinburgh area."/>
+		<meta name="description" content="Website of David Storey, a lead front-end focused web developer and team leader."/>
 
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width,initial-scale=1"/>
